--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                       <figure class="mx-auto d-inline-block">
                         <img src="images/person_2.jpg" alt="Image" class="mx-auto img-fluid w-25 rounded-circle">
                       </figure>
-                      <p class="text-white"><strong>Jean Smith</strong></p>
+                      <p class="text-white"><strong>Hardik Adesara</strong></p>
                       <blockquote>
                         <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde tenetur quis facilis quam optio voluptate totam placeat, doloremque. Sit repellat ipsum dolor fugit similique itaque maxime saepe ipsam. Velit, harum!&rdquo;</p>
                       </blockquote>
@@ -292,7 +292,7 @@
                       <figure class="mx-auto d-inline-block">
                         <img src="images/person_3.jpg" alt="Image" class="mx-auto img-fluid w-25 rounded-circle">
                       </figure>
-                      <p class="text-white"><strong>Jean Smith</strong></p>
+                      <p class="text-white"><strong>Hardik Adesara</strong></p>
                       <blockquote>
                         <p>&ldquo;Lorem ipsum dolor sit amet, consectetur adipisicing elit. Unde tenetur quis facilis quam optio voluptate totam placeat, doloremque. Sit repellat ipsum dolor fugit similique itaque maxime saepe ipsam. Velit, harum!&rdquo;</p>
                       </blockquote>
