--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     <section class="site-section-hero bg-image" style="background-image: url('images/img_9.jpg');"  data-stellar-background-ratio="0.5" id="section-home">
         <div class="row justify-content-center align-items-center">
           <div class="col-md-7 text-center">
-            <h1 class="text-white heading text-uppercase" data-aos="fade-up">Hardik Adesara</h1>
+            <h1 class="text-white heading text-uppercase" data-aos="fade-up">Hardik Adesara [F5]</h1>
             <p class="lead text-white mb-5" data-aos="fade-up" data-aos-delay="100">"Taking an image, freezing a moment, reveals how rich reality truly is."</p>
             <p data-aos="fade-up" data-aos-delay="100"><a href="#section-contact" class="btn btn-primary btn-md smoothscroll">Contact Me</a></p>
           </div>
